# rds_pg_anon

./: .gitignore  Dockerfile  README.md  example.env  example_docker_run.sh  example_run.sh  pg_anon  pyproject.toml
.github/workflows/: build_and_push_dispatch.yml  build_and_push_tags.yml
data/: README.md
extend/: .gitignore  README.md  custom_data_types.py  defaults.json  defaults_super-cool-db.8sdfuidhs8d7.us-east-2.rds.amazonaws.com.json  example_defaults.json  example_defaults_super-cool-db.8sdfuidhs8d7.us-east-2.rds.amazonaws.com.json
src/pganon/: __init__.py  anonymizer.py  aws_utils.py  loglib.py  pg_rds_utils.py  retry_utils.py  serializer.py  state_utils.py
