[project]
name = "pganon"
version = "0.1.0"
description = "Replicate and anonymize a postgresql RDS instance to another instance or a snapshot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.37",
    "psycopg2-binary>=2.9.10",
    "click>=8.1.8",
    "boto3>=1.36.14",
    "deepdiff>=8.2.0",
    "faker>=35.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["E501"]
